--- a/Student/app/src/main/res/values/strings.xml
+++ b/Student/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Student</string>
+    <string name="spinner_title">Select Category</string>
+    <string name="country_prompt"></string>
+<string name="country_arrays"></string>
 </resources>
